# rge

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  RGECommon.cmake  base_cfg.json  requirements.txt
assets/cli/materials/: basic.json  basic.mat
assets/cli/shaders/: basic.fs  basic.vs  draw_mesh_def.sc  draw_mesh_def.shader  draw_mesh_fs.sc  pbr.fs.sc  phong_apply_lights.fs  simple_def.shader  simple_fs.shader  simple_inst_vs.sc  simple_inst_vs.shader  simple_vs.shader
build_cfg/: cfg_exec.py  res_gen.py  shaderc.py
docs/: index.md
examples/simple_game/: .gitignore  CMakeLists.txt  rge_cfg.json
examples/simple_game/.gen_cfg/: resources_def.hpp
examples/simple_game/src/: entry.cpp  entry.hpp
resources/cli/materials/: basic.mat  phong.mat  standard.mat
resources/cli/shaders/: basic.def  draw_mesh_fs.shader  materials.glsl
src/: node.cpp  node.hpp  packet.hpp  resource_provider.cpp  resource_provider.hpp  rge.hpp  rge_init.hpp  util.cpp  util.hpp
src/cli/: boot.cpp  boot.hpp  boot_glfw.cpp  boot_html5.cpp  camera.cpp  camera.hpp  game.cpp  game.hpp
src/cli/platform/: platform.hpp  (+1 more)
src/resource/: filesystem_resource_provider.cpp  http_resource_provider.cpp  resource_provider.cpp  resource_provider.hpp
src/resources/: filesystem_resource_provider.cpp  resource.hpp  resource_manager.hpp  resource_provider.hpp
src/scene/: gltf_scene_loader.cpp  gltf_scene_loader.hpp  material.hpp  materials_def.hpp  scene.cpp  scene.hpp  tinygltf_scene_loader.cpp  tinygltf_scene_loader.hpp  utils.cpp  utils.hpp
src/server/: main.cpp
tools/: shaderc.py
(+30 files in other folders)
